// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error-boundary Basic renders as expected 1`] = `"This content does not trigger an error."`;

exports[`error-boundary Trigger error renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-red-faint color-red-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-red-lighter round-full color-red flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="events-none icon"
        data-testid="icon-alert"
        focusable="false"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        style={
          Object {
            "border": 0,
            "clip": "rect(0, 0, 0, 0)",
            "height": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
            "wordWrap": "normal",
          }
        }
      >
        alert
      </span>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Something went wrong
    </div>
    <p>
      We sent the error to the team. Please refresh the page to try again.
    </p>
    <details>
      <summary
        className="cursor-pointer"
      >
        Error details
      </summary>
      <pre>
        <code>
          BadFunction(...): Nothing was returned from render. This usually means a return statement is missing. Or, to render nothing, return null.
        </code>
      </pre>
    </details>
  </div>
</div>
`;

exports[`error-boundary Trigger error with custom title and note contents renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-red-faint color-red-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-red-lighter round-full color-red flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        aria-hidden="true"
        className="events-none icon"
        data-testid="icon-alert"
        focusable="false"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
      <span
        style={
          Object {
            "border": 0,
            "clip": "rect(0, 0, 0, 0)",
            "height": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
            "wordWrap": "normal",
          }
        }
      >
        alert
      </span>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Well this is embarassing
    </div>
    <p>
      This feature is having trouble loading, please try again later.
    </p>
    <details>
      <summary
        className="cursor-pointer"
      >
        Error details
      </summary>
      <pre>
        <code>
          BadFunction(...): Nothing was returned from render. This usually means a return statement is missing. Or, to render nothing, return null.
        </code>
      </pre>
    </details>
  </div>
</div>
`;
